Ethers transfer added in Swagger
